log db_url string

--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -10,7 +10,7 @@
     ],
     "scripts": {
         "build": "tsc --project tsconfig.build.json",
-        "seed": "node dist/seed.js",
+        "seed": "pnpm run build && node dist/seed.js",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
     "devDependencies": {
