add .env to turbo global deps

--- a/turbo.json
+++ b/turbo.json
@@ -29,5 +29,9 @@
         "dev": {
             "cache": false
         }
-    }
+    },
+    "globalDependencies": [
+        "**/.env",
+        "**/.env.*"
+    ]
 }
