load .env.test in playwrightconfig.ts

--- a/turbo.json
+++ b/turbo.json
@@ -32,6 +32,8 @@
     },
     "globalDependencies": [
         "**/.env",
-        "**/.env.*"
+        "**/.env.*",
+        ".env",
+        ".env.test"
     ]
 }
