--- a/packages/seed/tsconfig.build.json
+++ b/packages/seed/tsconfig.build.json
@@ -6,6 +6,7 @@
 		"noEmit": false,
 		"outDir": "./dist",
 		"declaration": true,
-		"declarationDir": "./dist"
+		"declarationDir": "./dist",
+		"rootDirs": ["src", "../site/src/lib/config"]
 	}
 }
