forward script args pnpm -> turbo -> playwright

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "turbo run build",
-    "test": "turbo run test",
+    "test": "turbo run test --",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint"
   },
