--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -25,6 +25,7 @@
         "microbundle": "0.15.0",
         "ms": "3.0.0-canary.1",
         "prisma": "3.14.0",
+        "sade": "^1.8.1",
         "ts-node": "10.7.0",
         "typescript": "4.6.4"
     }
