--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -23,7 +23,6 @@
     "@felte/reporter-svelte": "1.1.2",
     "@felte/reporter-tippy": "1.1.2",
     "@felte/validator-zod": "1.0.10",
-    "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
     "@playwright/test": "1.22.2",
     "@prisma/client": "3.14.0",
@@ -75,6 +74,7 @@
     "superjson": "1.9.1",
     "svelecte": "3.7.7",
     "svelte": "3.48.0",
+    "svelte-awesome-icons": "^0.1.3",
     "svelte-check": "2.7.1",
     "svelte-fa": "2.4.0",
     "svelte-preprocess": "4.10.6",
