--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -74,7 +74,7 @@
     "superjson": "1.9.1",
     "svelecte": "3.7.7",
     "svelte": "3.48.0",
-    "svelte-awesome-icons": "^0.1.3",
+    "svelte-awesome-icons": "0.1.3",
     "svelte-check": "2.7.1",
     "svelte-fa": "2.4.0",
     "svelte-preprocess": "4.10.6",
