--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -23,8 +23,7 @@
     "@felte/reporter-svelte": "1.1.2",
     "@felte/reporter-tippy": "1.1.2",
     "@felte/validator-zod": "1.0.10",
-    "@fortawesome/free-solid-svg-icons": "6.1.1",
-    "@iconify/json": "^2.1.49",
+    "@iconify/json": "2.1.49",
     "@playwright/test": "1.22.2",
     "@prisma/client": "3.14.0",
     "@rgossiaux/svelte-headlessui": "1.0.1",
@@ -76,7 +75,6 @@
     "svelecte": "3.7.7",
     "svelte": "3.48.0",
     "svelte-check": "2.7.1",
-    "svelte-fa": "2.4.0",
     "svelte-preprocess": "4.10.6",
     "svelte-select": "4.4.7",
     "svelte2tsx": "0.5.10",
@@ -84,7 +82,7 @@
     "tippy.js": "6.3.7",
     "tslib": "2.4.0",
     "typescript": "4.6.4",
-    "unplugin-icons": "^0.14.3",
+    "unplugin-icons": "0.14.3",
     "uuid": "8.3.2",
     "zod": "3.16.1"
   },
