--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -16,6 +16,7 @@
     "@iconify-json/ri": "1.1.2",
     "@playwright/test": "1.22.2",
     "@sveltejs/adapter-auto": "1.0.0-next.48",
+    "@sveltejs/adapter-static": "1.0.0-next.32",
     "@sveltejs/kit": "1.0.0-next.345",
     "@svelteness/kit-docs": "0.22.12",
     "@typescript-eslint/eslint-plugin": "5.26.0",
