--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
         "build": {
             "outputs": [
                 ".svelte-kit/**",
-                "dist/**"
+                "dist/**",
+                "build/**"
             ]
         },
         "package": {
