--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
 	"css.validate": false,
 	"files.exclude": {
-		// this interfering with imports?
-		"**/node_modules/": true
+		"**/node_modules/": true,
+		"packages/site/package/**": true
 	},
 	"html.autoCreateQuotes": false,
 	"editor.suggest.showWords": false,
@@ -51,7 +51,7 @@
 	// "editor.formatOnSave": false,
 	// "eslint.run": "onSave",
 	"svelte.enable-ts-plugin": true,
-	"editor.formatOnSave": true,
+	"editor.formatOnSave": true
 	// "svelte.plugin.svelte.codeActions.enable": false,
 	// "svelte.plugin.svelte.format.enable": false,
 	// "svelte.plugin.typescript.semanticTokens.enable": false,
