--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: 6.32.2
+          version: 7.1.7
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
@@ -40,7 +40,7 @@ jobs:
         run: pnpm install
 
       - name: Install Playwright
-        run: npx playwright install@1.22.2
+        run: npx playwright install
 
       - name: Test
         run: pnpm test
