--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -75,6 +75,7 @@
     "svelecte": "3.7.7",
     "svelte": "3.48.0",
     "svelte-check": "2.7.1",
+    "svelte-meta-tags": "^2.6.1",
     "svelte-preprocess": "4.10.6",
     "svelte-select": "4.4.7",
     "svelte2tsx": "0.5.10",
