--- a/turbo.json
+++ b/turbo.json
@@ -29,6 +29,11 @@
         },
         "dev": {
             "cache": false
+        },
+        "preview": {
+            "dependsOn": [
+                "build"
+            ]
         }
     },
     "globalDependencies": [
