--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "svelte-kit dev -p 3001",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
+    "preview": "svelte-kit preview -p 3001",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
