--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "svelte-kit dev -p 3001",
     "preview": "svelte-kit preview -p 3001",
+    "build": "svelte-kit build",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
