add vercel build ouput to turbo.json

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,8 @@
             "outputs": [
                 ".svelte-kit/**",
                 "dist/**",
-                "build/**"
+                "build/**",
+                ".vercel_build_output/**"
             ]
         },
         "package": {
