--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
 	"css.validate": false,
 	"files.exclude": {
-		"**/node_modules/": true,
-		"packages/site/package/**": true,
+		"**/node_modules/": true
+	},
+	"search.exclude": {
+		"**/node_modules": true,
+		"**/bower_components": true,
+		"**/*.code-search": true,
 		"packages/site/.svelte-kit/**": true,
-		"**/dist/**": true
+		"**/dist/**": true,
+		"packages/site/package/**": true
 	},
 	"html.autoCreateQuotes": false,
 	"editor.suggest.showWords": false,
