--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -53,6 +53,7 @@
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
+    "date-fns-tz": "^1.3.4",
     "dotenv": "16.0.1",
     "eslint": "8.17.0",
     "eslint-config-prettier": "8.5.0",
