don't rebuild site if only tests change

--- a/turbo.json
+++ b/turbo.json
@@ -3,6 +3,9 @@
     "baseBranch": "origin/dev",
     "pipeline": {
         "build": {
+            "inputs": [
+                "!(tests/**)"
+            ],
             "outputs": [
                 ".svelte-kit/**",
                 "dist/**",
@@ -11,6 +14,9 @@
             ]
         },
         "package": {
+            "inputs": [
+                "!(tests/**)"
+            ],
             "outputs": [
                 "package/**"
             ]
