don't cache test command

--- a/turbo.json
+++ b/turbo.json
@@ -29,7 +29,8 @@
             "outputs": [
                 "playwright-report",
                 "test-results"
-            ]
+            ],
+            "cache": false
         },
         "lint": {
             "outputs": []
