--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -53,7 +53,7 @@
     "cookie": "0.5.0",
     "cross-env": "7.0.3",
     "date-fns": "2.28.0",
-    "date-fns-tz": "^1.3.4",
+    "date-fns-tz": "1.3.4",
     "dotenv": "16.0.1",
     "eslint": "8.17.0",
     "eslint-config-prettier": "8.5.0",
@@ -76,7 +76,7 @@
     "svelecte": "3.8.0",
     "svelte": "3.48.0",
     "svelte-check": "2.7.2",
-    "svelte-meta-tags": "^2.6.1",
+    "svelte-meta-tags": "2.6.1",
     "svelte-preprocess": "4.10.7",
     "svelte-select": "4.4.7",
     "svelte2tsx": "0.5.10",
