--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "@self/backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -21,35 +21,35 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "8.0.0",
-    "@nestjs/core": "8.0.0",
-    "@nestjs/platform-express": "8.0.0",
+    "@nestjs/common": "8.4.6",
+    "@nestjs/core": "8.4.6",
+    "@nestjs/platform-express": "8.4.6",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.2.0"
+    "rxjs": "7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "8.0.0",
-    "@nestjs/schematics": "8.0.0",
-    "@nestjs/testing": "8.0.0",
+    "@nestjs/cli": "8.2.6",
+    "@nestjs/schematics": "8.0.11",
+    "@nestjs/testing": "8.4.6",
     "@types/express": "4.17.13",
-    "@types/jest": "27.5.0",
-    "@types/node": "16.0.0",
-    "@types/supertest": "2.0.11",
-    "@typescript-eslint/eslint-plugin": "5.0.0",
-    "@typescript-eslint/parser": "5.0.0",
-    "eslint": "8.0.1",
-    "eslint-config-prettier": "8.3.0",
+    "@types/jest": "28.1.1",
+    "@types/node": "17.0.42",
+    "@types/supertest": "2.0.12",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "8.17.0",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "jest": "28.0.3",
-    "prettier": "2.3.2",
-    "source-map-support": "0.5.20",
-    "supertest": "6.1.3",
-    "ts-jest": "28.0.1",
-    "ts-loader": "9.2.3",
-    "ts-node": "10.0.0",
+    "jest": "28.1.1",
+    "prettier": "2.6.2",
+    "source-map-support": "0.5.21",
+    "supertest": "6.2.3",
+    "ts-jest": "28.0.4",
+    "ts-loader": "9.3.0",
+    "ts-node": "10.8.1",
     "tsconfig-paths": "4.0.0",
-    "typescript": "4.3.5"
+    "typescript": "4.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
