--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
     "@nestjs/schematics": "8.0.11",
+    "@nestjs/swagger": "5.2.1",
     "@nestjs/testing": "8.4.6",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
@@ -45,6 +46,7 @@
     "prettier": "2.6.2",
     "source-map-support": "0.5.21",
     "supertest": "6.2.3",
+    "swagger-ui-express": "4.4.0",
     "ts-jest": "28.0.4",
     "ts-loader": "9.3.0",
     "ts-node": "10.8.1",
