--- a/packages/backend/.gitignore
+++ b/packages/backend/.gitignore
@@ -1,3 +1,5 @@
+src/generated
+
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
