--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -33,6 +33,7 @@
     "@nestjs/schematics": "8.0.11",
     "@nestjs/swagger": "5.2.1",
     "@nestjs/testing": "8.4.6",
+    "@openapitools/openapi-generator-cli": "2.5.1",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
     "@types/node": "17.0.42",
