--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,6 +24,8 @@
     "@nestjs/common": "8.4.6",
     "@nestjs/core": "8.4.6",
     "@nestjs/platform-express": "8.4.6",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.13.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5"
