--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -24,16 +24,17 @@
     "@nestjs/common": "8.4.6",
     "@nestjs/core": "8.4.6",
     "@nestjs/platform-express": "8.4.6",
+    "@nestjs/swagger": "5.2.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
-    "rxjs": "7.5.5"
+    "rxjs": "7.5.5",
+    "swagger-ui-express": "4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
     "@nestjs/schematics": "8.0.11",
-    "@nestjs/swagger": "5.2.1",
     "@nestjs/testing": "8.4.6",
     "@openapitools/openapi-generator-cli": "2.5.1",
     "@types/express": "4.17.13",
@@ -49,7 +50,6 @@
     "prettier": "2.6.2",
     "source-map-support": "0.5.21",
     "supertest": "6.2.3",
-    "swagger-ui-express": "4.4.0",
     "ts-jest": "28.0.4",
     "ts-loader": "9.3.0",
     "ts-node": "10.8.1",
