--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "jest": "28.1.1",
     "prettier": "2.6.2",
+    "prisma": "3.14.0",
     "source-map-support": "0.5.21",
     "supertest": "6.2.3",
     "ts-jest": "28.0.4",
