--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "8.4.6",
     "@nestjs/platform-express": "8.4.6",
     "@nestjs/swagger": "5.2.1",
+    "@prisma/client": "3.14.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "reflect-metadata": "0.1.13",
