--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,7 +28,9 @@
     "@prisma/client": "3.14.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "lodash": "4.17.21",
     "reflect-metadata": "0.1.13",
+    "remeda": "0.0.35",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5",
     "swagger-ui-express": "4.4.0"
@@ -40,6 +42,7 @@
     "@openapitools/openapi-generator-cli": "2.5.1",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.1",
+    "@types/lodash": "4.14.182",
     "@types/node": "17.0.42",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.27.1",
