--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "8.4.6",
     "@nestjs/swagger": "5.2.1",
     "@prisma/client": "3.14.0",
+    "@sentry/node": "7.1.1",
+    "@sentry/tracing": "7.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "lodash": "4.17.21",
