--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "build:vercel": "pnpm exec prisma generate && pnpm --filter=@self/site... build && pnpm run postbuild:vercel",
+    "build:vercel": "pnpm --filter=@self/site... build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
@@ -13,9 +13,6 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "postbuild:vercel": "find ../../node_modules/.pnpm/ -name \"*libquery_engine*\" -type f -exec cp {} .vercel_build_output/functions/node/render \\;;cp prisma/schema.prisma .vercel_build_output/functions/node/render/;ls .vercel_build_output/functions/node/render/",
-    "postinstall": "prisma generate",
-    "prisma:gen": "prisma generate",
     "test": "playwright test",
     "report": "playwright show-report"
   },
@@ -25,7 +22,6 @@
     "@felte/validator-zod": "1.0.10",
     "@iconify/json": "2.1.59",
     "@playwright/test": "1.22.2",
-    "@prisma/client": "3.14.0",
     "@rgossiaux/svelte-headlessui": "1.0.2",
     "@self/seed": "workspace:^0.0.1",
     "@sentry/browser": "7.1.1",
@@ -70,7 +66,6 @@
     "postcss": "8.4.14",
     "prettier": "2.6.2",
     "prettier-plugin-tailwindcss": "0.1.11",
-    "prisma": "3.14.0",
     "remeda": "0.0.35",
     "superjson": "1.9.1",
     "svelecte": "3.8.0",
