--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nestjs/common": "8.4.6",
+    "@nestjs/config": "2.1.0",
     "@nestjs/core": "8.4.6",
     "@nestjs/platform-express": "8.4.6",
     "@nestjs/swagger": "5.2.1",
