--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -28,6 +28,8 @@
     "@nestjs/common": "8.4.6",
     "@nestjs/config": "2.1.0",
     "@nestjs/core": "8.4.6",
+    "@nestjs/jwt": "8.0.1",
+    "@nestjs/passport": "8.2.2",
     "@nestjs/platform-express": "8.4.6",
     "@nestjs/swagger": "5.2.1",
     "@prisma/client": "3.15.2",
@@ -36,6 +38,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "lodash": "4.17.21",
+    "passport-jwt": "4.0.0",
     "reflect-metadata": "0.1.13",
     "remeda": "0.0.35",
     "rimraf": "3.0.2",
@@ -51,6 +54,7 @@
     "@types/jest": "28.1.1",
     "@types/lodash": "4.14.182",
     "@types/node": "17.0.42",
+    "@types/passport-jwt": "3.0.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
