--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -38,6 +38,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "lodash": "4.17.21",
+    "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "reflect-metadata": "0.1.13",
     "remeda": "0.0.35",
