--- a/render.yaml
+++ b/render.yaml
@@ -8,8 +8,8 @@ services:
     plan: Free
     branch: initNestjs
     dockerCommand: ./webdis.sh # optional (defaults to Dockerfile command)
-    numInstances: 1
-    maxInstances: 1
+    # numInstances: 1
+    # maxInstances: 1
     buildCommand: cd packages/backend && npm run build
     startCommand: cd packages/backend && npm run start:prod
     # healthCheckPath: /
