--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
     startCommand: cd packages/backend && npm run start:prod
     # healthCheckPath: /
     envVars:
-      - key: DB_URL
+      - key: DATABASE_URL
         fromDatabase:
           name: elephant
           property: connectionString
