prisma generate in render

--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,12 @@ services:
     env: node
     repo: https://github.com/aqaratech/aqtech.git
     region: frankfurt
-    plan: Free
+    plan: Standard
     branch: initNestjs
     # numInstances: 1
     # maxInstances: 1
     buildCommand: cd packages/backend && npm install && npm run build
-    startCommand: cd packages/backend && npm run start:prod
+    startCommand: cd packages/backend && npx prisma generate && npm run start:prod
     # healthCheckPath: /
     envVars:
       - key: DATABASE_URL
