--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@casl/ability": "5.4.4",
+    "@casl/prisma": "1.0.2",
     "@nestjs/common": "8.4.7",
     "@nestjs/config": "2.1.0",
     "@nestjs/core": "8.4.7",
