--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,6 +39,7 @@
     "@sentry/tracing": "7.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "fuse.js": "6.6.2",
     "jwks-rsa": "2.1.4",
     "lodash": "4.17.21",
     "passport": "0.6.0",
