fix test path resolution imports

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -93,6 +93,10 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleDirectories": [
+      "<rootDir>/../",
+      "node_modules"
+    ]
   }
 }
