--- a/packages/seed/tsconfig.build.json
+++ b/packages/seed/tsconfig.build.json
@@ -7,6 +7,6 @@
 		"outDir": "./dist",
 		"declaration": true,
 		"declarationDir": "./dist",
-		"rootDirs": ["src", "../site/src/lib/config"]
+		"rootDirs": ["src"]
 	}
 }
