test/mock prisma client in nestjs

--- a/packages/seed/tsconfig.build.json
+++ b/packages/seed/tsconfig.build.json
@@ -2,6 +2,7 @@
 	"extends": "./tsconfig.json",
 	"exclude": ["dist"],
 	"compilerOptions": {
+		"module": "CommonJS",
 		"sourceMap": true,
 		"noEmit": false,
 		"outDir": "./dist",
