--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,7 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "prisma": {
-    "seed": "node ../seed/dist/seed/src/go-seed.js"
+    "seed": "tsx ../seed/dist/go-seed.ts"
   },
   "dependencies": {
     "@casl/ability": "5.4.4",
@@ -78,6 +78,7 @@
     "ts-loader": "9.3.0",
     "ts-node": "10.8.1",
     "tsconfig-paths": "4.0.0",
+    "tsx": "3.6.0",
     "typescript": "4.7.4"
   },
   "jest": {
