--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -56,7 +56,7 @@
     "@nestjs/schematics": "8.0.11",
     "@nestjs/testing": "8.4.7",
     "@openapitools/openapi-generator-cli": "2.5.1",
-    "@self/seed": "link:../seed",
+    "@self/seed": "workspace:0.0.1",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.2",
     "@types/lodash": "4.14.182",
