--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "3.15.2",
     "@sentry/node": "7.2.0",
     "@sentry/tracing": "7.2.0",
+    "cache-manager": "4.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
     "fuse.js": "6.6.2",
@@ -57,6 +58,7 @@
     "@nestjs/testing": "8.4.7",
     "@openapitools/openapi-generator-cli": "2.5.1",
     "@self/seed": "workspace:0.0.1",
+    "@types/cache-manager": "4.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.2",
     "@types/lodash": "4.14.182",
