--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -61,6 +61,7 @@
     "@types/cache-manager": "4.0.0",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.3",
+    "@types/js-yaml": "4.0.5",
     "@types/lodash": "4.14.182",
     "@types/node": "18.0.0",
     "@types/passport-jwt": "3.0.6",
@@ -71,6 +72,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
     "jest": "28.1.1",
+    "js-yaml": "4.1.0",
     "prettier": "2.7.1",
     "prisma": "3.15.2",
     "prisma-dbml-generator": "0.9.1",
