Revert "remove trpc from hooks"
This reverts commit 50675dea7d137146a15358ca65d590077c127219.

--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -21,6 +21,8 @@
 			"$models/*": ["src/lib/models/*"],
 			"$utils": ["src/lib/utils/index.ts"],
 			"$utils/*": ["src/lib/utils/*"],
+			"$routers": ["src/lib/server/trpc/routers/index.ts"],
+			"$routers/*": ["src/lib/server/trpc/routers/*"],
 			"$environment": ["src/lib/environment/index.ts"],
 			"$environment/*": ["src/lib/environment/*"],
 			"$user": ["src/user/index.ts"],
