--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -83,5 +83,9 @@
     "uuid": "8.3.2",
     "zod": "3.17.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@prisma/client": "3.15.2",
+    "prisma": "3.15.2"
+  }
 }
