--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -41,6 +41,7 @@
     "cache-manager": "4.0.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.13.2",
+    "cookie-parser": "1.4.6",
     "date-fns": "2.28.0",
     "fuse.js": "6.6.2",
     "jwks-rsa": "2.1.4",
@@ -60,6 +61,7 @@
     "@openapitools/openapi-generator-cli": "2.5.1",
     "@self/seed": "workspace:0.0.1",
     "@types/cache-manager": "4.0.0",
+    "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.13",
     "@types/jest": "28.1.3",
     "@types/js-yaml": "4.0.5",
