--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -23,6 +23,7 @@
     "@iconify/json": "2.1.63",
     "@playwright/test": "1.23.0",
     "@rgossiaux/svelte-headlessui": "1.0.2",
+    "@self/sdk": "workspace:0.0.1",
     "@self/seed": "workspace:0.0.1",
     "@sentry/browser": "7.3.1",
     "@sentry/node": "7.3.1",
