--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,7 +8,7 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc"
+        "build": "./gen-schema.sh && tsc"
     },
     "devDependencies": {
         "typescript": "4.7.4"
