--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,9 +8,12 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "./gen-schema.sh && tsc"
+        "build": "tsc",
+        "dev": "tsc --watch",
+        "generate": "openapi-generator-cli generate"
     },
     "devDependencies": {
+        "@openapitools/openapi-generator-cli": "2.5.1",
         "typescript": "4.7.4"
     }
 }
