--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,7 +8,7 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "openapi-generator-cli generate && tsc",
+        "build": "tsc",
         "dev": "nodemon -V --delay 2 -w openapi.yaml --exec \"openapi-generator-cli generate && tsc\"",
         "generate": "openapi-generator-cli generate"
     },
