generate sdk in build script
dont use docker to gen sdk

add dash

use --custom-gen

fix path

simplify gen script

try docker in vercel

add docker bash script

determine sdk build in bash script

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -8,9 +8,10 @@
     "type": "module",
     "main": "dist/index.js",
     "scripts": {
-        "build": "tsc",
-        "dev": "nodemon -V --delay 2 -w openapi.yaml --exec \"openapi-generator-cli generate && tsc\"",
-        "generate": "openapi-generator-cli generate"
+        "build": "pnpm run generate && tsc",
+        "dev": "pnpm run generate && tsc",
+        "dev:watch": "nodemon -V --delay 1 -w openapi.yaml --exec \"pnpm run dev\"",
+        "generate": "./gen-sdk-docker.sh"
     },
     "devDependencies": {
         "@openapitools/openapi-generator-cli": "2.5.1",
