--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/passport": "8.2.2",
     "@nestjs/platform-express": "8.4.7",
     "@nestjs/swagger": "5.2.1",
+    "@nestjs/terminus": "8.1.0",
     "@prisma/client": "3.15.2",
     "@sentry/node": "7.3.1",
     "@sentry/tracing": "7.3.1",
@@ -49,6 +50,7 @@
     "lodash": "4.17.21",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
+    "prom-client": "14.0.1",
     "reflect-metadata": "0.1.13",
     "remeda": "0.0.35",
     "rimraf": "3.0.2",
