--- a/packages/backend/docker-compose-monitor.yml
+++ b/packages/backend/docker-compose-monitor.yml
@@ -9,6 +9,8 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
     ports:
       - '9090:9090'
+    extra_hosts:
+      - host.docker.internal:host-gateway
 
   grafana:
     image: grafana/grafana:latest
@@ -17,8 +19,11 @@ services:
     links:
       - prometheus:prometheus
     volumes:
-      - ./data/grafana:/var/lib/grafana
+      - grafana-storage:/var/lib/grafana
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=12345
     ports:
-      - '3000:3000'
+      - '3003:3000'
+
+volumes:
+  grafana-storage:
