--- a/packages/backend/prometheus.yml
+++ b/packages/backend/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 5s
 scrape_configs:
   - job_name: 'atlas-backend-metrics'
-    metrics_path: /api/v1/metrics
+    metrics_path: /metrics
     static_configs:
-      - targets: ['host.docker.internal:3333']
+      - targets: ['host.docker.internal:3002']
