--- a/packages/backend/prometheus.yml
+++ b/packages/backend/prometheus.yml
@@ -4,4 +4,4 @@ scrape_configs:
   - job_name: 'atlas-backend-metrics'
     metrics_path: /metrics
     static_configs:
-      - targets: ['host.docker.internal:3002']
+      - targets: ['host.docker.internal:3002', 'api.nest.letand.be']
