--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -31,6 +31,7 @@
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
     "@sveltejs/adapter-auto": "1.0.0-next.53",
+    "@sveltejs/adapter-node": "1.0.0-next.78",
     "@sveltejs/adapter-vercel": "1.0.0-next.59",
     "@sveltejs/kit": "1.0.0-next.357",
     "@tailwindcss/aspect-ratio": "0.4.0",
