--- a/render.yaml
+++ b/render.yaml
@@ -26,6 +26,34 @@ services:
       ignoredPaths:
         - packages/backend/**/*.spec.ts
 
+  # Site
+  - type: web
+    name: site
+    env: node
+    repo: https://github.com/aqaratech/aqtech.git
+    region: frankfurt
+    plan: Starter
+    branch: initNestjs
+    # numInstances: 1
+    # maxInstances: 1
+    buildCommand: pnpm install --filter=. --filter=@self/site... && pnpm build --filter=@self/site...
+    startCommand: cd packages/site && node build/index.js
+    # healthCheckPath: /health
+    autoDeploy: true
+    envVars:
+      - key: VITE_API_URL
+        fromService:
+          name: nestjs-dev
+          property: hostport
+      - key: VITE_RENDER
+        value: true
+
+    buildFilter:
+      paths:
+        - packages/site/**
+      ignoredPaths:
+        - packages/site/**/*.spec.ts
+
 databases:
   - name: elephant
     region: frankfurt
