--- a/render.yaml
+++ b/render.yaml
@@ -43,6 +43,7 @@ services:
     envVars:
       - key: VITE_API_URL
         fromService:
+          type: web
           name: nestjs-dev
           property: hostport
       - key: VITE_RENDER
