update db plan to standard

--- a/render.yaml
+++ b/render.yaml
@@ -58,6 +58,6 @@ services:
 databases:
   - name: elephant
     region: frankfurt
-    plan: Free
+    plan: Standard
     # databaseName: postgres # optional (Render may add a suffix)
     # user: postgres # optional
