use openapi-generator directly after install java

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "build": "pnpm run generate && tsc",
         "dev": "tsx watcher.ts",
-        "generate": "./gen-sdk-docker.sh"
+        "generate": "openapi-generator-cli generate"
     },
     "devDependencies": {
         "@openapitools/openapi-generator-cli": "2.5.1",
