--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -49,6 +49,7 @@
     "fuse.js": "6.6.2",
     "jwks-rsa": "2.1.4",
     "lodash": "4.17.21",
+    "meilisearch": "0.26.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
     "prisma": "3.15.2",
