rm paths in tsconfig.json

--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -12,21 +12,6 @@
 		"noUncheckedIndexedAccess": true,
 		// "exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
-		"sourceMap": true,
-		"paths": {
-			"$lib": ["src/lib"],
-			"$lib/*": ["src/lib/*"],
-			"$components/*": ["./src/lib/components/*"],
-			"$models": ["src/lib/models/index.ts"],
-			"$models/*": ["src/lib/models/*"],
-			"$utils": ["src/lib/utils/index.ts"],
-			"$utils/*": ["src/lib/utils/*"],
-			"$environment": ["src/lib/environment/index.ts"],
-			"$environment/*": ["src/lib/environment/*"],
-			"$user": ["src/user/index.ts"],
-			"$user/*": ["src/user/*"]
-			// "@self/site": ["src/lib/index.ts"],
-			// "@self/site/*": ["src/lib/*"]
-		}
+		"sourceMap": true
 	}
 }
