--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -31,6 +31,7 @@
     "@sentry/tracing": "7.6.0",
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
+    "@sveltejs/adapter-auto": "1.0.0-next.55",
     "@sveltejs/adapter-node": "1.0.0-next.79",
     "@sveltejs/adapter-vercel": "1.0.0-next.60",
     "@sveltejs/kit": "1.0.0-next.367",
