--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "svelte-kit sync",
-    "dev": "vite dev",
-    "build": "vite build",
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
     "build:vercel": "pnpm --filter=@self/site... build",
     "package": "svelte-kit package",
-    "preview": "vite preview",
+    "preview": "svelte-kit preview",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
     "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests --watch",
     "check:nodemon": "nodemon --exec 'pnpm run check' -e 'ts svelte' --watch 'src' --delay 2",
@@ -31,10 +31,10 @@
     "@sentry/tracing": "7.6.0",
     "@steeze-ui/heroicons": "1.1.1",
     "@steeze-ui/svelte-icon": "1.3.1",
-    "@sveltejs/adapter-auto": "1.0.0-next.55",
-    "@sveltejs/adapter-node": "1.0.0-next.79",
-    "@sveltejs/adapter-vercel": "1.0.0-next.60",
-    "@sveltejs/kit": "1.0.0-next.367",
+    "@sveltejs/adapter-auto": "1.0.0-next.53",
+    "@sveltejs/adapter-node": "1.0.0-next.78",
+    "@sveltejs/adapter-vercel": "1.0.0-next.59",
+    "@sveltejs/kit": "1.0.0-next.357",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.2",
     "@tailwindcss/typography": "0.5.3",
