rm origin env var from docker cmd

--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -24,4 +24,5 @@ ENV CI=0
 RUN pnpm -w run build --filter=@self/site...
 EXPOSE 3000
 
-CMD ["sh", "-c", "ORIGIN=https://rp1.nbe.workers.dev node packages/site/build/index.js"]
+# CMD ["sh", "-c", "ORIGIN=https://rp1.nbe.workers.dev node packages/site/build/index.js"]
+CMD ["node", "packages/site/build/index.js"]
