--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -1,4 +1,4 @@
-FROM node:16
+FROM node:16.9
 
 # Install OpenJDK-11
 # https://stackoverflow.com/questions/31196567/installing-java-in-docker-image
@@ -14,16 +14,18 @@ RUN pnpm fetch
 ADD . ./
 # TODO only intall site stuff
 # RUN pnpm install -r --offline 
-# TODO install should be after filter arg
-RUN pnpm install --filter=. --filter=@self/site...
+RUN pnpm --filter=. --filter=@self/site... install 
 
 # https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
 # TODO copy over the modules from above onto a `slim` image
 
 # TODO move env var to bash script
-ENV CI=0
-RUN pnpm -w run build --filter=@self/site...
+RUN pnpm -w --filter=@self/site... run build 
+
+WORKDIR /app/packages/site
 EXPOSE 3000
+
+ENV AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
 
 # CMD ["sh", "-c", "ORIGIN=https://rp1.nbe.workers.dev node packages/site/build/index.js"]
 CMD ["node", "packages/site/build/index.js"]
