--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -14,7 +14,8 @@ RUN pnpm fetch
 ADD . ./
 # TODO only intall site stuff
 # RUN pnpm install -r --offline 
-RUN pnpm --filter=. --filter=@self/site... install 
+RUN pnpm --filter=. --filter=@self/site... install --prod=false
+
 
 # https://github.com/mhart/alpine-node#example-dockerfile-for-your-own-nodejs-project
 # TODO copy over the modules from above onto a `slim` image
