--- a/packages/site/Caddyfile
+++ b/packages/site/Caddyfile
@@ -1,5 +1,16 @@
-# reverse_proxy /api/* http://domm80hlzp3li.cloudfront.net
-handle_path /api/* {
-  # rewrite * /{path}
-	reverse_proxy http://domm80hlzp3li.cloudfront.net
+localhost {
+  log
+  handle_path /api/* {
+    # rewrite * /{path}
+    reverse_proxy http://domm80hlzp3li.cloudfront.net {
+      # header_down Strict-Transport-Security max-age=31536000;
+    }
+  }
+
+  handle_path / {
+    reverse_proxy localhost:3000 {
+      # header_up Host {upstream_hostport}
+      # header_down Strict-Transport-Security max-age=31536000;
+    } 
+  }
 }
