--- a/Dockerfile.site
+++ b/Dockerfile.site
@@ -39,6 +39,4 @@ EXPOSE 3000
 
 ENV AUTH0_CLIENT_SECRET=uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf
 
-# CMD ["sh", "-c", "ORIGIN=https://rp1.nbe.workers.dev node packages/site/build/index.js"]
-# start caddy in bg then run site 
-CMD ["sh", "-c", "caddy start && PORT=3000 node build/index.js"]
+CMD ["sh", "-c", "caddy start && PORT=3000 PROTOCOL_HEADER=x-forwarded-proto HOST_HEADER=x-forwarded-host node build/index.js"]
