--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -79,9 +79,5 @@
     "uuid": "8.3.2",
     "zod": "3.17.3"
   },
-  "type": "module",
-  "dependencies": {
-    "@prisma/client": "3.15.2",
-    "prisma": "3.15.2"
-  }
+  "type": "module"
 }
